data/derived/comb/progs/unify/prog8132.ml.out
Characters 24-29:
  let _ = sepConcat ", " ["foo";"bar";"baz"];;
                          ^^^^^
Error: This expression has type string but an expression was expected of type
         string list
